--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/df75d5028c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,8 +30,8 @@
                 <h1 class="banner-heading">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Donwnload CV</button>
-                <button class="btn-primary">Contact
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Donwnload CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact
                 </button>
 
             </div>
@@ -160,7 +161,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>Download CV</button>
             </div>
 
         </section>
